library building - src/other/ext dependencies now use the native
build system provided by the project, rather than having BRL-CAD
rewrite it to match ours.

* fixed perspective to orthogonal view toggling in archer - Cliff Yapp
* improved 'burst' cross-platform support, removed nburst - Cliff Yapp
* fixed bot_merge with oriented plate mode bots - Sean Morrison
* restored MGED ViewRing menu, sweep rectangle features - Cliff Yapp
* restored MGED collaboration and rateknob features - Cliff Yapp
* fixed a crash when shaded BRep drawing fails - Cliff Yapp
* added man pages for process and ps commands - Cliff Yapp
* added man page for 3dm-g Rhino3D importer - Cliff Yapp
* improved bot_dump default command help - Chris McGregor
* fixed suffix for 3dm-g converted solids - Cliff Yapp
* added -N view obj name option to overlay command - Cliff Yapp
* updated man pages for GED brep command - Cliff Yapp
* added man page for MGED Overlaps Tool - Chris McGregor
* major STEPcode updates, using unmodified upstream 0.8.1 - Cliff Yapp
* added aircode reporting support to the lc command - Sean Morrison
* fixed 3dm to g names converting alphabetized - Chris McGregor
* updated Tcl/Tk to version 8.6.12 - Cliff Yapp
* updated netpbm to version 10.73.40 - Cliff Yapp
* updated zlib to version 1.2.13 - Cliff Yapp
* fixed mged -c 'unknown variable' warning dialogs - Sean Morrison
* improved mged & archer html command help formatting - Sean Morrison
* fixed archer empty string ("") loading behavior - Cliff Yapp
* rt* tools' -P option accepts negative #core counts - Sean Morrison
* gqa -Ae exposed air report no longer has gapped air - Sean Morrison
* fixed rt framebuffer bug with -g/-G cellsize options - Sean Morrison
* added new idents(5) file format manual page - Sean Morrison
* preserved path prefixes on search cmd results - Cliff Yapp
* new 'material' command and material object infrastructure
        - Dinges, Connelly, Olivarez, McGregor, Studwell, Wilson

