@@ -21,6 +21,7 @@ rewrite it to match ours.
 * fixed perspective to orthogonal view toggling in archer - Cliff Yapp
 * improved 'burst' cross-platform support, removed nburst - Cliff Yapp
 * fixed bot_merge with oriented plate mode bots - Sean Morrison
+* bot_dump infers output type from filename extension - Sean Morrison
 * restored MGED ViewRing menu, sweep rectangle features - Cliff Yapp
 * restored MGED collaboration and rateknob features - Cliff Yapp
 * fixed a crash when shaded BRep drawing fails - Cliff Yapp
